<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">喵喵学</string>
<!--    <string name="network_url">http://192.168.31.238:12343</string>-->
    <string name="network_url">https://air.pcat.top</string>
    <string name="text">学习</string>
    <string name="text2">课程</string>
    <string name="text3">班级</string>
    <string name="text4">我的</string>
    <string name="text5">动态</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="evenote_title" translatable="false">ShareSDK是一个神奇的SDK</string>
    <string name="share_content" translatable="false">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网 http://mob.com @Mob移动开发者服务平台</string>
    <string name="infile_default" translatable="false" />
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
        <item>res:///com/baidu/android/voicedemo/offline_input.pcm, 测试离线命令词</item>
        <item>#com.baidu.aip.asrwakeup3.core.inputstream.InFileStream.create16kStream(), 文件流</item>
        <item>#com.baidu.aip.asrwakeup3.core.inputstream.MyMicrophoneInputStream.getInstance(), 自行从麦克风读取</item>
    </string-array>
    <string name="pid_default" translatable="false" />
    <string-array name="pid">
        <item>@string/pid_default</item>
        <item>1537, 普通话输入法模型(默认) </item>
        <item>15372, 普通话输入法模型(后处理带标点) </item>
        <item>15373, 普通话输入法模型(在线语义) </item>
        <item>8001, 自训练平台输入法模型</item>
        <item>8002, 自训练平台搜索模型</item>
        <item>1936, 普通话远场模型 </item>
        <item>19362,普通话远场模型（后处理带标点） </item>
        <item>19363,普通话远场模型（在线语义） </item>
        <item>1737, 英语</item>
        <item>1637, 粤语</item>
        <item>16372, 粤语（后处理带标点）</item>
        <item>1837, 四川话</item>
    </string-array>


    <string name="lm_id_default" translatable="false"></string>
    <string-array name="lm_id">
        <item>@string/lm_id_default</item>
        <item>1068, 自训练平台上线的id，和账号维度绑定</item>
    </string-array>
    <string name="vad_default" translatable="false"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>dnn, 默认，推荐模型</item>
        <item>touch,  关闭静音断句功能。用戶手动停止录音</item>
    </string-array>
    <string name="vad_timeout_default" translatable="false"></string>
    <string-array name="vad_timeout_list">
        <item>@string/vad_timeout_default</item>
        <item>0, 开启长语音（离线不支持）。建议pid选择15372。</item>
        <item>800, 毫秒，静音800ms后断句，适用于输入短语</item>
        <item>2000, 毫秒，静音2000ms后断句，适用于输入长句</item>
        <item>2230, 毫秒，请修改代码中的VAD_ENDPOINT_TIMEOUT，自定义时长（建议800ms-3000ms之间）</item>
    </string-array>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>
